--- a/css/style.css
+++ b/css/style.css
@@ -126,7 +126,12 @@ a{
     color: red;
 }
 /*Estilização da tabela*/
+.tbContainer{
+    max-width: 100%;
+    overflow: auto;
+}
 .tbCidades{
+    min-width: 500px;
     background-color: white;
     padding: 10px;
     padding-bottom: 100px;
@@ -323,4 +328,10 @@ footer h2{
     color: white;
     font-size: 20px;
     padding: 17px;
+}
+@media screen and (max-width: 500px){
+    .addCitiesBtn, .formAddress input[type=submit]{
+        width: 100%;
+        font-size: 24px;
+    }
 }
